Data is truncated everywhere when long text is entered fixed

--- a/technical/src/apps/user/patientcare/src/app/modules/patient-management/patient-details/allergies/allergies.component.css
+++ b/technical/src/apps/user/patientcare/src/app/modules/patient-management/patient-details/allergies/allergies.component.css
@@ -1,3 +1,5 @@
-.allergies {
-
+.labelleft{
+    margin-left: 8px;
+    margin-bottom:5px !important;
+    overflow-wrap: break-word !important;   
 }
