--- a/technical/src/apps/user/patientcare/src/app/modules/patient-management/patient-details/history-of-present-Illness/history-of-present-Illness.component.css
+++ b/technical/src/apps/user/patientcare/src/app/modules/patient-management/patient-details/history-of-present-Illness/history-of-present-Illness.component.css
@@ -1,3 +1,7 @@
-.history-of-present-Illness {
 
+.labelleft{
+    margin-left: 8px;
+    margin-bottom:5px !important;
+    overflow-wrap: break-word !important;
+    /* color: #396766; */
 }
