--- a/technical/src/apps/user/patientcare/src/app/modules/patient-management/patient-details/treatment-before-admission/treatment-before-admission.component.css
+++ b/technical/src/apps/user/patientcare/src/app/modules/patient-management/patient-details/treatment-before-admission/treatment-before-admission.component.css
@@ -1,3 +1,6 @@
-.treatment-before-admission {
 
+.labelleft{
+    margin-left: 8px;
+    margin-bottom:5px !important;
+    overflow-wrap: break-word !important;   
 }
